# fastapi-boilerplate-on-di

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.dev.txt  requirements.prod.txt
docker/api/: Dockerfile.dev  startup.dev.sh  startup.sh
docker/db/: Dockerfile
migrations/: env.py
migrations/versions/: 88f2cb0d4fc9_base.py
src/: api.py
src/app/: server.py
src/app/auth/: exceptions.py  models.py  permissions.py  repository.py  service.py  views.py
src/app/home/: views.py
src/app/log/: container.py  models.py  repository.py  service.py
src/app/user/: exceptions.py  models.py  repository.py  service.py  views.py
src/application/: api.py  container.py  server.py
src/application/celery_task/: __init__.py
src/application/core/authority/: permissions.py
src/application/core/base_class/: repository.py  service.py
src/application/core/config/: config_container.py
src/application/core/container/: app.py  (+1 more)
src/celery_task/: __init__.py
src/core/: settings_model.py
src/core/base_class/: repository.py
src/core/container/: app.py  config.py
src/core/db/: standalone_session_maker.py
src/core/dependencies/: __init__.py  permission.py
src/core/enums/: service_status.py
src/core/exceptions/: base.py  external_service.py  middleware.py
src/core/external_service/: __init__.py  auth_client.py
src/core/fastapi/: custom_json_response.py  log_route.py  pydantic_models.py
src/core/middlewares/: __init__.py  authentication_external.py  authentication_internal.py  sqlalchemy.py
src/core/repository/: base.py
src/core/utils/: __init__.py  camelcase.py  http_client.py  token_helper.py
tests/: conftest.py
tests/app/auth/: test_auth_client.py  test_service.py
tests/app/user/: test_service.py
tests/domain/auth/: service.py  test_service.py
tests/domain/user/: service.py  test_service.py
(+61 files in other folders)
