[tool.poetry]
name = "Dependency_injector_based_fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["rumbarum <rumbarum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.8.1"
SQLAlchemy = {version = "1.4.49", extras = ["mypy"]}
PyJWT = "^2.4.0"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
click = "^8.1.3"
greenlet = "2.0.2"
redis = "^4.3.4"
arrow = "^1.2.3"
orjson = "^3.9.1"
aiohttp = "^3.8.4"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
types-redis = "^4.5.5.2"
dependency-injector = "^4.41.0"
nest-asyncio = "^1.5.6"
sqlalchemy-stubs = "^0.4"
sqlalchemy-utils = "^0.41.1"
bcrypt = "^4.0.1"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
behave = "^1.2.6"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"
pytest-env = "^0.8.2"
autoflake = "^2.2.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
line_length = 88
force_grid_wrap = 0

[tool.mypy]
ignore_missing_imports = "True"
mypy_path = "src"
#check_untyped_defs = "True"
#disallow_untyped_defs = "True"
plugins = ["sqlalchemy.ext.mypy.plugin","sqlmypy","pydantic.mypy"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
use_shortcuts = true

[tool.pytest.ini_options]
addopts = "--tb=short"
pythonpath = "src"
asyncio_mode = "auto"
env = {SQLALCHEMY_SILENCE_UBER_WARNING=1}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
